[gd_scene load_steps=7 format=3 uid="uid://lcrvvpws5lcs"]

[ext_resource type="Script" uid="uid://c8nltbw4tc76j" path="res://Scenes/GameObjects/Entities/player.gd" id="1_cvnsp"]
[ext_resource type="PackedScene" uid="uid://drgys2ci4prqg" path="res://Scenes/GameObjects/Entities/bullet.tscn" id="2_c6t2i"]
[ext_resource type="Texture2D" uid="uid://cbpjnuvw1da8s" path="res://Assets/ship_sheet.png" id="2_vgqql"]
[ext_resource type="PackedScene" uid="uid://dojnc2qn1a1a0" path="res://Scenes/GameObjects/Components/health_component.tscn" id="3_vgqql"]
[ext_resource type="PackedScene" uid="uid://c1sdsbfvnv0xh" path="res://Scenes/GameObjects/Components/hurtbox_component.tscn" id="4_fkybt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvnsp"]
radius = 13.0
height = 106.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")
BULLET = ExtResource("2_c6t2i")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_vgqql")
hframes = 2

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-60, 30, -60, 30, 60, 0, -60, -30, -60, -20, -55, -10, -55, 10, -60, 20, -60, 30, 60, 0)

[node name="ShootCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(62, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hurtbox") instance=ExtResource("3_vgqql")]
hurtbox = NodePath("../HurtboxComponent")

[node name="HurtboxComponent" parent="." instance=ExtResource("4_fkybt")]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cvnsp")

[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="on_health_run_out" from="HealthComponent" to="." method="_on_health_component_on_health_run_out"]
